--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "bpmntosaga",
-  "version": "0.0.2",
+  "version": "0.0.6",
   "description": "Utilities to transform BPMN graphs to Redux sagas",
   "main": "build/index.js",
   "module": "build/index.js",
   "scripts": {
-    "build": "rm -rf build && babel src --out-dir build --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
+    "build": "rm -rf build && mkdir build && cp src/*.js build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,9 +22,8 @@
     "url": "https://github.com/dsouflis/bpmntosaga/issues"
   },
   "homepage": "https://github.com/dsouflis/bpmntosaga#readme",
-  "devDependencies": {
-    "@babel/core": "^7.10.4",
-    "@babel/cli": "^7.10.4",
-    "babel-loader": "^8.1.0"
+  "peerDependencies": {
+    "jsonpath": "^1.0.2",
+    "shift-parser": "^7.0.3"
   }
 }
