--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bpmntosaga",
-  "version": "0.0.8",
-  "description": "Utilities to transform BPMN graphs to Redux sagas",
+  "version": "0.0.9",
+  "description": "Utilities to transform BPMN graphs to Redux sagas and Swagger to client objects to use inside sagas",
   "main": "build/index.js",
   "module": "build/index.js",
   "scripts": {
@@ -26,6 +26,7 @@
     "jsonpath": "^1.0.2",
     "shift-parser": "^7.0.3",
     "handlebars": "^4.7.6",
+    "dot-object": "^2.1.3",
     "swagger-client": "^3.11.0"
   }
 }
