--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bpmntosaga",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "Utilities to transform BPMN graphs to Redux sagas and Swagger to client objects to use inside sagas",
   "main": "build/index.js",
   "module": "build/index.js",
@@ -27,6 +27,7 @@
     "shift-parser": "^7.0.3",
     "handlebars": "^4.7.6",
     "dot-object": "^2.1.3",
+    "deepmerge": "^4.2.2",
     "swagger-client": "^3.11.0"
   }
 }
